public/styles.css
  *, *::before, *::after{
  box-sizing: border-box;
  transition: all 0.4s ease-in-out;
}

img:hover {
  cursor: pointer;
}

.slide-right {
  transform: translate(150px, 0%);
}

.bigImage {
  width: 100%;
  height:100%;
  border: solid rgb(95,95,95);
  border-width: 1px;
}

.smallImage1, .smallImage2, .smallImage3, .smallImage4 {
  width: 100%;
  height:100%;
  border: solid rgb(95,95,95);
  border-width: 1px;
}

.item2 { 
  grid-area: main;
  width:  100%;
  height:100%;
  overflow:hidden;
  display: inline-block;
 }
.item3 { 
  grid-area: menu;
  width: 100%;
  height:100%;
  overflow:hidden;
  display: inline-block;
}
.item4 { 
  grid-area: right; 
  width: 100%;
  height:100%;
  overflow:hidden;
  display: inline-block;
}
.item5 { 
  grid-area: footer1;
  width: 100%;
  height:100%;
  overflow:hidden;
  display: inline-block;
 }

.item6 { 
  grid-area: footer2; 
  width: 100%;
  height:100%;
  overflow:hidden;
  display: inline-block;
}

.bigImage:hover, .smallImage1:hover, .smallImage2:hover, .smallImage3:hover, .smallImage4:hover {
  
  transform: scale(1.05);
}

.mySlides {
  width: 100%;
  height:100%;
  margin: 0 5px;
}

.mySlides:hover {
  transition: all 0.150s linear;
  transform: translate(50px, 0%);
}

.slideShowImage {
  opacity: 0.4;
  width: 100%;
  height: 100%;
}

.slideShowImage:hover {
  transition: all 0.1s ease-in-out;
  opacity: 1;
}

.increaseOpacity {
  opacity: 1;
}

.grid-container {
  z-index: 0;
  /*width: 1286px;*/
  width: 100%;
  height:63%;
  display: grid;
  grid-template-areas:
  'menu menu main right'
  'menu menu footer1 footer2';
  background-color: #484848;
}

.gallery {
  background-color: #262626;
  width: 100%;
  height:100%;
}
.Button {
  z-index: 10;
  position:relative;
  top: 88px;
  width: 125px;
  height: 39px;
  left: 25%;
}

.Button2 {
  position:relative;  
  z-index: 10;
  top:22px;
  left:5%;
  bottom: 88px;
  right:150px;
  width:94px;
}
.Button3 {
  position:relative;  
  z-index: 10;
  position:relative;  
  z-index: 10;
  width:94px;
  top:22px;
  left:27%;
  bottom: 88px;
  right:180px;
}

#leftButton {
  fill: white;
  position: absolute;
  left: 10px;
  top:272px;
}

#rightButton {
  fill: white;
  position: absolute;
  left: 1208px;
  top:272px;
}

#return {
  fill: white;
  position: absolute;
  left:1220px;
  top:16px;
  width: 30px;
}

#return:hover, #rightButton:hover, #leftButton:hover {
  cursor: pointer;
}

.modal{
  width: 100%;
  height:100%;
}

#curImg {
  width: 100%;
  height:100%;
}

#enlargedImage {
  position: relative;
  top: 84px;
  left:273px;
  width: 60%;
  height:70%;
  margin: 0;
  background-color: red;
}

.modalContent {
  position: relative;
  display: flex;
  overflow: hidden;
  justify-content: space-between;
  top:120px;
  width: 60%;
  height: 70px;
  background-color: #262626;
  left: 16.3%;
}

